@@ -1,3 +1,9 @@
+* Fri Oct 16 7:15:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>
+
+Fixed a memory leackage bug 
+Improved support for iconified windows ;)
+(both reported by W.L. IJzerman)
+
 * Wed Oct  7 7:45:00 CEST 1998  Antonio Larrosa <larrosa@kde.org>
 
 Improved dnd
